--- a/styles/main.less
+++ b/styles/main.less
@@ -1,3 +1,4 @@
+@import "variaveis.less";
 @import "mapas.less";
 @bpMobile: ~"(max-width: 767px)";
 @bpTablet: ~"(min-width: 768px) and (max-width: 1032px)";
@@ -28,7 +29,7 @@ li {
 }
 
 header {
-    background-color: #colors[bgHeadColor];
+    background-color: @bgHeadColor;
     position: sticky;
     top: 0;
     left: 0;
